# mdp-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/book-toml/: book.toml.tmpl
assets/themes/: mermaid-config.json  plantuml-tokyonight.puml
assets/themes/julian.jee/css/: breadcrumb.css  general.css  variables.css
assets/themes/julian.jee/js/: breadcrumb.js
nvim/: README.md
nvim/lua/mdp/: init.lua
nvim/plugin/: mdp.lua
scripts/: smoke.sh
src/: config.rs  main.rs  preset.rs  theme.rs
src/commands/: build.rs  dump.rs  install.rs  mod.rs  pdf.rs  preprocess.rs  serve.rs
tests/: build_integration.rs
tests/fixtures/: diagrams.md
