[package]
name = "mdp"
version = "0.1.0"
edition = "2024"
description = "Ad-hoc markdown previewer powered by mdbook — directory → browser in one command"
authors = ["Julian Jee <jeewangue@gmail.com>"]
license = "MIT"
repository = "https://github.com/jeewangue/mdp-rs"

# Explicit whitelist of what `cargo package` ships. The default tarball includes
# everything not in `.gitignore`, which would silently leak target/ if a future
# .gitignore is forgotten and would NOT include build.rs / assets/ if those ever
# end up gitignored. Pinning the include set decouples ship-surface from VCS.
include = [
    "src/**/*",
    "build.rs",
    "assets/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE*",
]

[[bin]]
name = "mdp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Theme + preprocessor assets are embedded into the binary.
rust-embed = "8"

# Robust CLI operations
which = "7"
tempfile = "3"
opener = "0.7"
ctrlc = { version = "3", features = ["termination"] }

# `mdp serve --watch` re-syncs SUMMARY when files are added/renamed/deleted in
# the source dir. notify-debouncer-mini batches events so a multi-file rename
# causes one resync, not N.
notify-debouncer-mini = "0.7"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dependencies.serde_json]
version = "1"

[dependencies.blake3]
version = "1"

[dependencies.base64]
version = "0.22"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
